@@ -193,7 +193,7 @@ namespace Mono.Cecil {
 							throw new FileNotFoundException ("Module not found : " + name);
 
 						try {
-							ImageReader module = new ImageReader (location.FullName);
+							ImageReader module = ImageReader.Read (location.FullName);
 							mt = module.Image.MetadataRoot.Streams.TablesHeap [typeof(ModuleTable)] as ModuleTable;
 							if (mt == null || mt.Rows.Count != 1)
 								throw new ReflectionException ("Can not read module : " + name);
